@@ -9,12 +9,16 @@
  * <a href="http://www.springframework.org/">Spring</a> related classes.
  *
  * <p>
- * This package also implements the <code>&lt;dellroad-stuff:sql&gt;</code> and <code>&lt;dellroad-stuff:sql-update&gt;</code>
+ * This package implements the <code>&lt;dellroad-stuff:sql&gt;</code> and <code>&lt;dellroad-stuff:sql-update&gt;</code>
  * custom Spring XML elements; these define beans of type {@link org.dellroad.stuff.schema.SQLCommandList SQLCommandList} and
  * {@link org.dellroad.stuff.schema.SpringSQLSchemaUpdate SpringSQLSchemaUpdate}, respectively.
  *
+ * <p>
+ * This package also implements the <code>&lt;dellroad-stuff:post-completion&gt;</code> custom Spring XML element.
+ *
  * @see org.dellroad.stuff.schema.SQLCommandList
  * @see org.dellroad.stuff.schema.SpringSQLSchemaUpdate
+ * @see org.dellroad.stuff.spring.PostCompletionSupport
  * @see <a href="http://www.springframework.org/">Spring Framework</a>
  */
 package org.dellroad.stuff.spring;
