@@ -4,6 +4,7 @@ Next Version
       SpringContextApplication bean; this also eliminates the requirement
       to create custom static get() method in subclass (issue #7)
     - Removed deprecated ContextApplicationFactoryBean
+    - Added @PostCompletionSupport Spring annotation
     - Added SpringXSLPersistentObjectSchemaUpdate.setTransformerFactory()
     - Added support for "empty stops" in PersistentObject
     - Fix possible ClassCastException in JiBXUtil.readObject()
